# mailslide

./: .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPER.md  GUIDE.en.md  GUIDE.md  IDEA.md  MANIFEST.in  README.en.md  README.md  README.zh-TW.md  app.py  config.yaml.sample  filters.yaml.sample  github_action_pypi_release.md  llm.yaml.sample  outlook_worker.py  pyproject.toml
.github/workflows/: publish-pypi.yml
config/: config.yaml  config.yaml.sample  llm-config.yaml  llm-config.yaml.sample  logging.yaml.sample
config/plugins/: add_category.yaml.sample  create_appointment.yaml.sample  download_attachments.yaml.sample  event_table.yaml.sample  move_to_folder.yaml.sample  summary_file.yaml.sample  write_file.yaml.sample
docs/releases/attachment-recall/: 0.4.1-rc4.md  0.4.1-rc5.md  0.4.1-rc6.md  0.4.1-rc7.md  0.4.2-rc1.md  README.md  baseline.json  template-attachment-recall-report.md
docs/releases/evidence/: 0.4.0-rc2.md  0.4.1-rc2.md  0.4.1-rc3.md  0.4.1-rc4.md  0.4.1-rc5.md  0.4.1-rc6.md  0.4.1-rc7.md  0.4.2-rc1.md  README.md  template-rc-evidence.md
mailslide/: __init__.py  __main__.py  _compat.py  cli_app.py  cli_args.py  cli_exit_map.py  cli_presenter.py  config_models.py  config_repository.py
outlook_mail_extractor/: __init__.py  __main__.py  config.py  config_io.py  config_migration.py  config_templates.py  core.py  i18n.py  llm.py  llm_dispatcher.py  logger.py  models.py  move_policy.py  parser.py  plugin_runner.py  runtime.py  screens.py  secrets.py  terminal_title.py  tui.py  ui_schema.py
outlook_mail_extractor/adapters/: __init__.py  outlook_actions.py
outlook_mail_extractor/contracts/: __init__.py  dependency_guard.py
outlook_mail_extractor/locales/: en-US.yaml  zh-TW.yaml
outlook_mail_extractor/locales/gettext/: messages.pot
outlook_mail_extractor/plugins/: __init__.py  base.py  calendar.py  category.py  download_attachments.py  download_attachments_paths.py  event_table.py  loader.py  move.py  summary_file.py  write_file.py
outlook_mail_extractor/screens/: __init__.py  about.py  common.py  home.py  schedule.py  usage.py
outlook_mail_extractor/services/: __init__.py  dependency_guard.py  email_extraction_service.py  job_execution.py  job_metrics_collector.py  message_collector.py  preflight.py  update_check.py
scripts/: check_llm_dependency_contract.py  i18n.ps1  release_pypi.ps1  sync_guides.ps1  update_version.ps1  validate_attachment_recall_evidence.py  validate_rc_evidence.py
task/: import-path-rename-assessment.md  import-path-rename-phase1-checklist.md
tasks/: todo.md
tests/: test_add_job_modal.py  test_app_home_tab_sync.py  test_app_language.py  test_cli_app.py  test_cli_dependency_guard.py  test_config_migration.py  test_config_models.py  test_config_repository.py  test_config_templates.py  test_config_ui_language.py  test_core_high_risk.py  test_create_appointment_plugin.py  test_dependency_guard_service.py  test_download_attachments_paths.py  test_download_attachments_plugin.py  test_event_table_plugin.py  test_home_auto_refresh.py  test_home_dependency_guard.py  test_i18n.py  test_import_compat.py  test_job_execution_service.py  test_job_log_i18n.py  test_llm_config_editor.py  test_llm_dependency_contract_drift.py  test_llm_dispatcher.py  test_main_config_editor.py  test_move_policy.py  test_parser.py  test_plugin_config_editor.py  test_plugin_loader.py  test_plugin_runner.py  test_preflight_service.py  test_release_evidence_validation.py  test_runtime_paths.py  test_summary_file_plugin.py  test_terminal_title.py  test_ui_schema.py  test_update_check_service.py  test_update_version_script.py  test_usage_screen.py
(+26 files in other folders)
