[project]
name = "outlook-mail-extractor"
version = "0.2.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "openpyxl>=3.1.5",
    "pycron>=0.2.2",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
]

[project.scripts]
outlook-extract = "outlook_mail_extractor.__main__:main"

[tool.setuptools.packages.find]
include = ["outlook_mail_extractor*"]
exclude = ["config*", "tasks*", "tests*"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "types-pywin32>=311.0.0.20260317",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = "pycron"
ignore_missing_imports = true
