[project]
name = "mailslide"
version = "0.3.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "openpyxl>=3.1.5",
    "pycron>=0.2.2",
    "pywin32>=311",
    "pyyaml>=6.0.3",
    "textual>=8.1.1",
    "textual-dev>=1.8.0",
]

[project.scripts]
mailslide = "outlook_mail_extractor.__main__:main"

[tool.setuptools.packages.find]
include = ["outlook_mail_extractor*", "mailslide*"]
exclude = ["config*", "tasks*", "tests*"]

[dependency-groups]
dev = [
    "babel>=2.17.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "types-pywin32>=311.0.0.20260317",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.setuptools.package-data]
outlook_mail_extractor = [
    "locales/*.yaml",
    "locales/gettext/**/*.mo",
    "locales/gettext/**/*.po",
]

[tool.mypy]
python_version = "3.13"

[[tool.mypy.overrides]]
module = "pycron"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
